--- a/templates/index.html
+++ b/templates/index.html
@@ -4,12 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+
 </head>
 <body>
-    <form action="/" method="POST">
-        <input autocomplete="off" type="text" name="prompt" id="prompt">
-        <input type="submit" value="search">
-    </form>
+
+    <div class="center" style=" justify-content: center; display: flex ; flex-direction: column; align-items: center  ; ">
+
+
+        <h1>SURGE</h1>
+        <form id="search" action="/" method="POST">
+            <input autocomplete="off" type="text" name="prompt" id="prompt">
+            <input type="submit" value="search">
+        </form>
+
+    </div>
+    
+
+    <style>
+
+        * {
+            margin: 0;
+            padding: 0;
+        }
+        .center {
+            margin-top: 50vh;
+            transform: translateY(-50%);
+        }
+    </style>
+
     
 </body>
 </html>
